fix zoom on focus on iOS by increasing font size

--- a/web/src/chrome/form.css
+++ b/web/src/chrome/form.css
@@ -3,7 +3,7 @@ input, textarea {
     border: none;
     border-radius: 0;
     padding: 1rem;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     width: 100%;
 }
 
