--- a/web/src/home/index.css
+++ b/web/src/home/index.css
@@ -9,6 +9,7 @@
 
 .home-store-code::before {
   content: 'https://honesty.store/';
+  font-size: 1.6rem;
   position: absolute;
   padding: 1rem;
   padding-left: 0;
